Fix chevron jagged border issue
Because the chevron SVG was overlaying the link text div, the two borders were interfering with each other. At times, the two borders would appear next to each other and cause a jagged appearance. This switches to using an SVG that starts exactly at the point the chevron triangle starts, to avoid the overlap, and also sets attributes on the stroke to stop it scaling.

--- a/app/assets/stylesheets/views/_brexit-landing-page.scss
+++ b/app/assets/stylesheets/views/_brexit-landing-page.scss
@@ -81,6 +81,14 @@ $dark-red: #B31424;
   .landing-page__ready-text {
     border: 2px solid govuk-colour("white");
     background-color: $dark-red;
+
+    @include govuk-media-query($from: mobile) {
+      border-right: 0;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-top-right-radius: 2px;
+      border-bottom-right-radius: 2px;
+    }
   }
 }
 
@@ -92,9 +100,10 @@ $dark-red: #B31424;
 
   @include govuk-media-query($from: mobile) {
     padding: govuk-spacing(3);
+    border-radius: 3px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    margin-right: 170px;
+    margin-right: 188px;
   }
 
 
